--- a/docs/theme/src/md/md-code.scss
+++ b/docs/theme/src/md/md-code.scss
@@ -40,7 +40,7 @@ pre {
   code {        
     font-size: inherit;
     color: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
     background: $color-bkg-15;
     border-radius: 4px;    
     overflow-x: auto;
