--- a/docs/theme/src/nav.scss
+++ b/docs/theme/src/nav.scss
@@ -1,7 +1,6 @@
 
 $top-menu-height: 92px;
 $max-width: 1100px;
-$content-padding-left: 330px;
 
 #grv-docs-top-menu{
   height: $top-menu-height;
@@ -39,28 +38,4 @@ $content-padding-left: 330px;
   .grv-content-body{
     display: none;
   }      
-}
-
-.grv-content-nav {  
-  position: absolute;
-  height: calc(100% - #{$top-menu-height});
-  overflow-y: auto;
-  overflow-x: auto;
-  background-color: $color-bkg-10;           
-  display: flex;
-  flex-direction: column;  
-  left: calc((100% - #{$max-width})/2 + 20px);
-  
-  .grv-content-nav-body{
-    overflow: auto;
-    width: 300px;
-  }
-}
-
-.--fixed-left-nav {
-  .grv-content-nav {
-    position: fixed;
-    top: 0;
-    height: calc(100% - 0px);    
-  }
 }
